--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -162,7 +162,7 @@
     "MSE = mean_squared_error(y, y_hat)\n",
     "MAE = mean_absolute_error(y, y_hat)\n",
     "print(\"The Mean squared error is %.3f\" % (MSE))\n",
-    "print(\"The Mean absolute error is %.3f\" % (MAE))"
+    "print(\"The Mean absolute error is %.3f\" % (MAE)) AAA"
    ]
   },
   {
